--- a/BookLibraryClient/angular.json
+++ b/BookLibraryClient/angular.json
@@ -23,9 +23,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/app.min.js",
+              "src/default.min.js",
+              "src/vendor.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -90,9 +95,14 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/app.min.js",
+              "src/default.min.js",
+              "src/vendor.min.js"
+            ]
           }
         }
       }
